# chainer-compiler

./: .clang-format  .dir-locals.el  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  chainer2onnx.py  deterministic_embed_id.py  e2e_asr_common.py  initializer.py  lstm.py  nikucheck.sh  oniku_update.sh  runtests.sh  setup.py  setup.sh  test_Alex_with_loss.py  test_AveragePool2d.py  test_BatchNorm.py  test_GoogleNet.py  test_GoogleNet_with_loss.py  test_MLP.py  test_MLP_with_loss.py  test_NstepLSTM.py  test_NstepLSTM_old.py  test_Resnet.py  test_SoftmaxClossEntropy.py  test_args.py  test_at_onnx.py  test_by_oniku.py  test_id.py  test_initializer.py  test_mxnet.py  test_seq2seq.py  testcasegen.py  tester.sh
.chainerci/: Dockerfile  before_install.sh  config.pbtxt  run-chainerci-pip-tests.sh  run-chainerci-tests.sh  run-onnx.sh  run_chainerci_pip_tests.sh  run_chainerci_tests.sh  run_onnx.sh  run_onnx_setup.sh  run_onnx_setup_dldt.sh  run_onnx_setup_onnxruntime.sh  run_onnx_setup_tvm.sh
.flexci/: before_install.sh  cache.sh  common.sh  config.pbtxt  run_chainerci_pip_tests.sh  run_flexci_pip_tests.sh  run_flexci_tests.sh  run_onnx.sh  run_onnx_setup.sh  run_onnx_setup_dldt.sh  run_onnx_setup_ngraph.sh  run_onnx_setup_onnxruntime.sh  run_onnx_setup_tvm.sh
ch2o/: .gitignore  requirements.txt  test_NstepLSTM_with_onnxtestcase.py  tester.sh  testtools.py
chainer2onnx/: __init__.py  builtin_funcs.py  chainer2onnx.py  funcs.py  initializer.py  links.py  links_funcs.py  test_args.py  testcasegen.py  utils.py  xp_numpy.py
chainer_compiler/: __init__.py  ch2o  chainer_compiler.py  chainer_compiler_tvm.py  elichika
chainer_compiler_cc/: CMakeLists.txt  chainer_compiler_core.cc
common/: CMakeLists.txt  codegen_util.py  iterator.h  iterator_test.cc  log.cc  log.h  protoutil.h  strutil.cc  strutil.h  strutil_test.cc
compiler/: CMakeLists.txt  code_emitter.cc  code_emitter.h  code_emitter_test.cc  config.cc  config.h  constant_propagation.cc  constant_propagation.h  context.cc  context.h  custom_onnx_ops.cc  custom_onnx_ops.h  custom_onnx_ops_test.cc  dtype.cc  dtype.h  dtype_inference.cc  dtype_inference.h  dtype_inference_test.cc  evaluator.cc  evaluator.h  evaluator_test.cc  file_cache.cc  file_cache.h  file_cache_test.cc  flags.cc  flags.h  flops.cc  flops.h  flops_test.cc  fusion.cc  fusion.h  fusion_dldt.cc  fusion_elementwise.cc  fusion_ngraph.cc  fusion_snpe.cc  fusion_tensorrt.cc  fusion_test.cc  fusion_tvm.cc  gen_node.py  gradient.cc  (+67 more)
compiler/chxvm/: chxvm_value.cc  chxvm_value.h  config.cc  config.h  emitter.cc  emitter.h  emitter_test.cc  gen_chxvm_codegen.py  simple_node_emitter.cc  simple_node_emitter.h  value_id_manager.cc  value_id_manager.h
compiler/computation_order/: core.cc  core.h  policy_chen.cc  policy_chen.h  policy_custom.cc  policy_custom.h  policy_dummy.cc  policy_dummy.h  policy_gt.cc  policy_gt.h
compiler/tvm/: compiler.cc  compiler.h
compiler/xcvm/: config.cc  config.h  context.cc  context.h  emitter.cc  emitter.h  emitter_test.cc  gen_xcvm_codegen.py  xcvm_value.cc  xcvm_value.h
configs/: CMakeLists.txt  backend_config.cc  backend_config.h  backend_config_test.cc  chxvm.json  chxvm_test.json  dldt.json  gen_load_json_from_name.py  json_repository.cc  json_repository.h  json_to_c.py  json_to_cc.py  ngraph.json  nvrtc.json  snpe.json  tensorrt.json
data/: LICENSE  update.sh
docker/: Dockerfile  Dockerfile.tmpl  README.md  build.sh
docs/: overview.md  setup.md  train_your_model.md  usage.md
elichika/: README.md  sandbox.py
feeder/: CMakeLists.txt  data_iterator.cc  data_iterator.h  data_iterator_test.cc  imagenet_iterator.cc  imagenet_iterator.h  imagenet_iterator_test.cc
menoh/: CMakeLists.txt  menoh.h  menoh.hpp  menoh_chainer_compiler.cc  menoh_chainer_compiler.cpp  menoh_chainer_compiler_util.hpp  menoh_example.cc  menoh_example.cpp  run_onnx.cc  run_onnx.cpp
python/: CMakeLists.txt  chainer_compiler.py  chainer_compiler_core.cc  chainer_compiler_core_test.py  chainer_compiler_test.py  chainer_compiler_tvm.py  dropout_test.py  fake_cupy_allocator.py  oniku.cc  oniku.py  oniku_core_test.py  oniku_test.py  oniku_tvm.py
python/chainer_compiler/: chainer_compiler.py
python/utils/: input_rewriter.py  rewrite_input.py
runtime/: CMakeLists.txt  backward_context.cc  backward_context.h  chainerx_util.cc  chainerx_util.h  chrome_tracing.cc  chrome_tracing.h  chxvm.cc  chxvm.h  chxvm.proto.tmpl  chxvm_defs.py  chxvm_op.cc  chxvm_op.h  chxvm_state.cc  chxvm_state.h  chxvm_test.cc  chxvm_var.cc  chxvm_var.h  gen_chxvm.py  gen_xcvm.py  meminfo.cc  meminfo.h  npy.cc  npy.h  npy_test.cc  strict_scalar.h  xchainer.cc  xchainer.h  xchainer_main.cc  xcvm.cc  xcvm.h  xcvm.proto.tmpl  xcvm_defs.py  xcvm_op.cc  xcvm_op.h  xcvm_ops.cc  xcvm_state.cc  xcvm_state.h  xcvm_test.cc  xcvm_var.cc  (+1 more)
runtime/ops/: activation.cc  connection.cc  constant.cc  controlflow.cc  creation.cc  cudnn_rnn.cc  cudnn_rnn.h  dldt.cc  generic.cc  indexing.cc  logic.cc  manipulation.cc  math.cc  ngraph.cc  noise.cc  normalization.cc  nvrtc.cc  pooling.cc  quantize.cc  resize.cc  rnn.cc  roi.cc  sequence.cc  snpe_dlc.cc  something.cc  sorting.cc  space_depth.cc  statistics.cc  tensorrt.cc  tvm.cc
scripts/: CMakeLists.txt  alex.py  blacklist_onnx_chainer_tests.py  build_onnx.sh  bump_submodule.sh  ch2o_tests.py  ch2ocheck.py  checkout-onnx-worktrees.sh  elichika_tests.py  elichikacheck.py  gen_backprop_tests.py  gen_backprop_tests_oc.py  gen_backprop_tests_pc.py  gen_chainercv_model_tests.py  gen_chainercv_test.py  gen_extra_node_test.py  gen_extra_test.py  gen_flags.py  gen_large_tests_oc.py  gen_mnist_mlp.py  nin.py  (+23 more)
tools/: CMakeLists.txt  cmdline.h  compare_dump_dirs.py  compiler_flags.cc  compiler_flags.h  dump.cc  dump_onnx.cc  dump_tensor.cc  log.cc  log.h  npz_to_onnx.py  run_onnx.cc  run_onnx.h  run_onnx.py  run_onnx_core.cc  run_onnx_main.cc  run_onnx_tvm.py  run_onnx_util.cc  run_onnx_util.h  train_imagenet.cc  train_imagenet.h  train_imagenet.py  train_imagenet_core.cc  train_imagenet_main.cc  train_imagenet_tvm.py  util.cc  util.h
(+621 files in other folders)
